add roles + full swagger
